--- a/bspider/templates/platform/config/frame_settings.py.tmpl
+++ b/bspider/templates/platform/config/frame_settings.py.tmpl
@@ -41,6 +41,7 @@ RABBITMQ_CONFIG = {
 # 节点监控相关配置 #
 #################
 # supervisor rpc server
+# 用户名和密码所有节点应保持一致，在此填写好后在启动时将自动进行配置
 SUPERVISOR_RPC = {
     'username': '',
     'password': '',
