--- a/bspider/templates/platform/config/frame_settings.py.tmpl
+++ b/bspider/templates/platform/config/frame_settings.py.tmpl
@@ -52,7 +52,8 @@ SUPERVISOR_RPC = {
 # 定时任务相关配置 #
 #################
 CRON_JOB_THREAD_NUM = 20
-CRON_JOB_PROCESS_NUM = 1
+# 弃用
+# CRON_JOB_PROCESS_NUM = 1
 CRON_JOB_REFRESH_TIME = 3
 
 #################
