--- a/bspider/templates/platform/bin/bcorn_manager.py.tmpl
+++ b/bspider/templates/platform/bin/bcorn_manager.py.tmpl
@@ -3,7 +3,7 @@
 
 这里采用单独进程处理任务调度
 """
-from bspider.bcron.work import run_bcorn
+from bspider.bcron import run_bcorn
 
 if __name__ == '__main__':
     run_bcorn()
