--- a/bspider/templates/platform/bin/scheduler_manager.py.tmpl
+++ b/bspider/templates/platform/bin/scheduler_manager.py.tmpl
@@ -1,4 +1,4 @@
-from bspider.scheduler.work import run_scheduler
+from bspider.scheduler import run_scheduler
 
 if __name__ == '__main__':
     run_scheduler()
