--- a/bspider/templates/spiders/extractor.py.tmpl
+++ b/bspider/templates/spiders/extractor.py.tmpl
@@ -1,5 +1,5 @@
 """a extractor templates"""
-from bspider.core.parser.base_extractor import BaseExtractor
+from bspider.parser import BaseExtractor
 from bspider.http import Request
 
 
