--- a/bspider/templates/spiders/middleware.py.tmpl
+++ b/bspider/templates/spiders/middleware.py.tmpl
@@ -1,4 +1,4 @@
-from bspider.core.downloader import BaseMiddleware
+from bspider.downloader import BaseMiddleware
 
 
 class DemoMiddleware(BaseMiddleware):
