--- a/bspider/templates/spiders/pipeline.py.tmpl
+++ b/bspider/templates/spiders/pipeline.py.tmpl
@@ -1,5 +1,5 @@
 """a pipeline template"""
-from bspider.core.parser import BasePipeline
+from bspider.parser import BasePipeline
 
 
 class DemoPipeline(BasePipeline):
