--- a/bspider/templates/tools_cfg/supervisor.conf.tmpl
+++ b/bspider/templates/tools_cfg/supervisor.conf.tmpl
@@ -1,7 +1,7 @@
 [unix_http_server]                                                                                                                                                                             
 file=${platform_path}/cache/supervisor.sock
 [supervisord]
-logfile=${platform_path}/log/supervisord.log
+logfile=${platform_path}/log/supervisor/supervisord.log
 loglevel=info
 pidfile=${platform_path}/cache/supervisord.pid
 [rpcinterface:supervisor]
@@ -22,17 +22,17 @@ startsecs=0
 stopwaitsecs=0
 autostart=false
 autorestart=true
-stdout_logfile=${platform_path}/log/agent.log
-stderr_logfile=${platform_path}/log/agent.log
+stdout_logfile=${platform_path}/log/supervisor/agent.log
+stderr_logfile=${platform_path}/log/supervisor/agent.log
 [program:master]
-command=gunicorn -c ${platform_path}/cache/master_gunicorn.py --chdir ${bin_path}/ studio_manager:app
+command=gunicorn -c ${platform_path}/cache/master_gunicorn.py --chdir ${bin_path}/ master_manager:app
 directory=${platform_path}
 startsecs=0
 stopwaitsecs=0
 autostart=false
 autorestart=true
-stdout_logfile=${platform_path}/log/master.log
-stderr_logfile=${platform_path}/log/master.log
+stdout_logfile=${platform_path}/log/supervisor/master.log
+stderr_logfile=${platform_path}/log/supervisor/master.log
 [program:scheduler]
 command=python ${bin_path}/scheduler_manager.py
 directory=${platform_path}
@@ -40,8 +40,8 @@ startsecs=0
 stopwaitsecs=0
 autostart=false
 autorestart=true
-stdout_logfile=${platform_path}/log/scheduler.log
-stderr_logfile=${platform_path}/log/scheduler.log
+stdout_logfile=${platform_path}/log/supervisor/scheduler.log
+stderr_logfile=${platform_path}/log/supervisor/scheduler.log
 [program:bcorn]
 command=python ${bin_path}/bcorn_manager.py
 directory=${platform_path}
@@ -49,5 +49,5 @@ startsecs=0
 stopwaitsecs=0
 autostart=false
 autorestart=true
-stdout_logfile=${platform_path}/log/bcorn.log
-stderr_logfile=${platform_path}/log/bcorn.log
+stdout_logfile=${platform_path}/log/supervisor/bcorn.log
+stderr_logfile=${platform_path}/log/supervisor/bcorn.log
