--- a/bspider/templates/tools_cfg/master_gunicorn.py.tmpl
+++ b/bspider/templates/tools_cfg/master_gunicorn.py.tmpl
@@ -7,3 +7,6 @@ workers = 1
 worker_connections = 2000
 worker_class = 'gevent'
 x_forwarded_for_header = 'X-FORWARDED-FOR'
+
+accesslog = "${platform_path}/log/master.log"      #访问日志文件
+errorlog = "${platform_path}/log/master.log"        #错误日志文件
