--- a/bspider/templates/platform/config/frame_settings.py.tmpl
+++ b/bspider/templates/platform/config/frame_settings.py.tmpl
@@ -37,6 +37,13 @@ RABBITMQ_CONFIG = {
     'virtual_host': '',
 }
 
+# rabbitmq management 插件 服务地址
+RABBITMQ_MANAGEMENT_CONFIG = {
+    'address': '',
+    'username': '',
+    'password': ''
+}
+
 #################
 # 节点监控相关配置 #
 #################
