--- a/bspider/templates/platform/bin/master_manager.py.tmpl
+++ b/bspider/templates/platform/bin/master_manager.py.tmpl
@@ -4,9 +4,15 @@
  * BSpider use gunicorn and supervisor
  *** in Unix, use 'bspider master start' to run a master process
 """
+from flask import render_template
+
 from bspider.master.server import create_app
 
 app = create_app()
+
+@app.route('/', methods=["GET"])
+def index():
+    return render_template('index.html')
 
 if __name__ == '__main__':
     app.run(debug=True, port=5000)
