--- a/bspider/templates/platform/bin/master_manager.py.tmpl
+++ b/bspider/templates/platform/bin/master_manager.py.tmpl
@@ -2,7 +2,7 @@
  A master server to manage all node by Flask
  *** master can't run in Windows
  * BSpider use gunicorn and supervisor
- *** in Unix, use 'bspider master start' to run a master process
+ *** in Linux/MacOS, use 'bspider master start' to run a master process
 """
 from flask import render_template
 
