--- a/bspider/templates/platform/config/frame_settings.py.tmpl
+++ b/bspider/templates/platform/config/frame_settings.py.tmpl
@@ -83,4 +83,4 @@ RABBITMQ_MANAGEMENT_CONFIG = {
 # 消息通知模块配置 #
 #################
 # 钉钉机器人
-DING = 'https://oapi.dingtalk.com/robot/send?access_token=a64765f4c75890229f9d6431dc8583b0e32f5104a8eef04b3ef7fd4e4855d6e4'
+DING = ''
