--- a/bspider/templates/spiders/settings.yaml.tmpl
+++ b/bspider/templates/spiders/settings.yaml.tmpl
@@ -6,15 +6,15 @@ description: project的简介
 rate: 10
 
 # 全局配置 可不填
-global_settings:
-  project_name: ${project_name}
+# global_settings:
+  # project_name: ${project_name}
   # 这里的配置项作用于project全局所有 Middleware 和 Pipeline 都可读取
   # 如和Middleware 和 Pipeline的私有配置重复则以私有配置为主
 # 下载器配置
 downloader:
-  max_retry_times: 3 # int 下载url异常的最大重试次数 default: 3
-  ignore_retry_http_code: # list 下载器忽略重试的http code
-    - 599 # 框架内部异常code 默认此code不重试
+  # max_retry_times: 3 # int 下载url异常的最大重试次数 default: 3
+  # ignore_retry_http_code: # list 下载器忽略重试的http code
+    # - 599 # 框架内部异常code 默认此code不重试
   middleware:
     - DemoMiddleware:
         # 这里的配置项仅作用于DemoMiddleware 其余Middleware 和 Pipeline 无法获取
