--- a/bspider/templates/spiders/extractor.py.tmpl
+++ b/bspider/templates/spiders/extractor.py.tmpl
@@ -1,4 +1,6 @@
-"""@description=default"""
+"""
+@description=default
+"""
 from bspider.parser import BaseExtractor
 from bspider.http import Request
 
