--- a/bspider/templates/spiders/task.py.tmpl
+++ b/bspider/templates/spiders/task.py.tmpl
@@ -1,5 +1,7 @@
-"""@description=default"""
-from bspider.core.bcron.base_task import BaseTask
+"""
+@description=default
+"""
+from bspider.bcron import BaseTask
 
 
 class DemoTask(BaseTask):
