--- a/bspider/templates/tools_cfg/agent_gunicorn.py.tmpl
+++ b/bspider/templates/tools_cfg/agent_gunicorn.py.tmpl
@@ -6,7 +6,8 @@ pidfile = '${platform_path}/cache/agent_gunicorn.pid'
 workers = 1
 worker_connections = 2000
 worker_class = 'gevent'
-x_forwarded_for_header = 'X-FORWARDED-FOR'
+x_forwarded_for_header = 'X-Forwarded-For'
+access_log_format = '[%(D)s gunicorn %(p)d gunicorn.py:1] ${log_level}: %(b) %(r)s %(b)s'
 
 accesslog = "${platform_path}/log/agent.log"      #访问日志文件
 errorlog = "${platform_path}/log/agent.log"        #错误日志文件
