--- a/bspider/templates/middleware/middleware.py.tmpl
+++ b/bspider/templates/middleware/middleware.py.tmpl
@@ -4,7 +4,7 @@
 from bspider.downloader import BaseMiddleware
 
 
-class DemoMiddleware(BaseMiddleware):
+class ${middleware_name}(BaseMiddleware):
     """中间件支持协程、常规两种编程方式
     ***协程虽然能提升效率但协程编程是棘手的
     多中间件执行顺序：
