--- a/bspider/templates/pipeline/pipeline.py.tmpl
+++ b/bspider/templates/pipeline/pipeline.py.tmpl
@@ -4,7 +4,7 @@
 from bspider.parser import BasePipeline
 
 
-class DemoPipeline(BasePipeline):
+class ${pipeline_name}(BasePipeline):
 
     """Pipeline支持协程、常规两种编程方式
     ***协程虽然能提升效率但协程编程是棘手的
