--- a/bspider/templates/spiders/extractor.py.tmpl
+++ b/bspider/templates/spiders/extractor.py.tmpl
@@ -1,16 +1,20 @@
 """
 @description=default
 """
+from bspider.debug import Debuger
 from bspider.parser import BaseExtractor, MySQLSaverItem
 from bspider.http import Request
 
 
-class DemoExtractor(BaseExtractor):
+class ${ProjectName}Extractor(BaseExtractor):
 
     # with constructed function
     # def __init__(self, settings, log):
     #     super().__init__(settings, log)
     #     your code
+    def start_url(self):
+        """生成任务起始的URL"""
+        yield Request('url')
 
     def parser(self, response):
         """
@@ -44,3 +48,7 @@ class DemoExtractor(BaseExtractor):
     #    ***一个extractor 可以有多个errback方法和 callback方法
     #    """
     #    raise e
+
+
+if __name__ == '__main__':
+    Debuger().start()
