--- a/bspider/templates/spiders/settings.yml.tmpl
+++ b/bspider/templates/spiders/settings.yml.tmpl
@@ -2,8 +2,17 @@ project_name: ${project_name}
 # 抓取任务的组别，无实际意义，方便多抓取任务分组管理
 group: 基础数据抓取
 description: project的简介
-# 抓取任务的抓取速度
-rate: 10
+
+# 任务调度配置
+scheduler:
+  # 抓取任务的抓取速度
+  rate: 10
+  # 抓取任务的调度周期
+  trigger: '* * * * *'
+  # 定时任务类型，目前只支持crontab
+  trigger_type: cron
+  # 调度说明
+  description: 调度说明
 
 # 全局配置 可不填
 # global_settings:
