--- a/bspider/templates/tools_cfg/master_gunicorn.py.tmpl
+++ b/bspider/templates/tools_cfg/master_gunicorn.py.tmpl
@@ -2,7 +2,7 @@ import gevent.monkey
 gevent.monkey.patch_all()
 loglevel = '${log_level}'
 bind = '${master_ip}:${master_port}'
-pidfile = '${platform_path}/cache/master_gunicorn.pid'
+pidfile = '${platform_path}/.cache/master_gunicorn.pid'
 workers = 1
 worker_connections = 2000
 worker_class = 'gevent'
